# spd

./: CMakeLists.txt  LICENSE  README.md  build.cmd  main.cpp  spd.c  spd.h  spd_crc.c  spd_tool.c  utf8.c
getopt/: CMakeLists.txt  getopt.c  getopt.h
io/: CMakeLists.txt  io.c
io/include/io/: io.h
io/win32/: ch341.c
spd/: CMakeLists.txt  spd.c  spd.h
spd/include/spd/: spd.h
tests/: CMakeLists.txt  main.cpp
